<resources>
    <string name="app_name">模板工程</string>

    <!-- 公用 -->
    <string name="login_Invalid_name">当前用户登录已失效!</string>
    <string name="no_network_name">当前无网络，请检查网络设置!</string>
    <string name="countdown_code_send_succeed">验证码已发送，请注意查收</string>
    <string name="two_password_input_error">两次密码输入不一致，请重新输入</string>
    <string name="phone_input_error">手机号输入不正确</string>

    <string name="load_status_loading">正在加载中</string>
    <string name="load_status_no_net">没有网络</string>
    <string name="load_status_fail_refresh">加载失败，点击重新加载</string>

    <!-- 登录 -->
    <string name="login_register">注册</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_text">登录</string>

    <!-- 注册 -->
    <string name="register_title">注册</string>
    <string name="register_hint">手机号仅用于登录和保护账号安全</string>
    <string name="register_login">登录</string>
    <string name="register_phone_hint">输入手机号码</string>
    <string name="register_code_hint">输入验证码</string>
    <string name="register_send_code">发送验证码</string>
    <string name="register_password_hint1">设置密码</string>
    <string name="register_password_hint2">再次输入密码</string>

    <!-- 主页 -->
    <string name="home_exit_hint">再按一次退出程序</string>
    <string name="home_nav_index">首页</string>
    <string name="home_nav_data">数据</string>
    <string name="home_nav_find">发现</string>
    <string name="home_nav_me">个人中心</string>

    <!-- 设置 -->
    <string name="setting_title">设置</string>
    <string name="setting_language">语言切换</string>
    <string name="setting_language_simple">简体中文</string>
    <string name="setting_language_complex">繁体中文</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_cache">清空缓存</string>
    <string name="setting_auto">自动登录</string>
    <string name="setting_agreement">隐私协议</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_exit">退出登录</string>

    <!-- 关于 -->
    <string name="about_title">关于我们</string>
    <string name="about_copyright">Copyright © 2019</string>

</resources>
